--- a/imageoper/config.cfg
+++ b/imageoper/config.cfg
@@ -1,9 +1,9 @@
 # 阿里云ak配置，建议采用子账户只授权ecs镜像操作
 [common]
 # 阿里云acccesskeyid
-accessKeyId = LTAIhfXlcxxxxxxxxx
+accessKeyId = LTAIhfXlcjyln6tW
 # 阿里云accesssecret
-accessSecret = GwfAMvR4K2ELmtxxxxxxxxxxxxxx
+accessSecret = GwfAMvR4K2ELmt76184oqLTVgRfAso
 # log目录名称
 logdir_name = logdir
 # log文件名称
@@ -15,8 +15,8 @@ logfile_name = ecsoperlog.log
 # 源地域实例regionid，可以参考：https://help.aliyun.com/document_detail/40654.html?spm=a2c1g.8271268.10000.5.5f98df25B98bhJ
 s_RegionId = cn-shanghai
 
-# 源实例id
-s_InstanceId = i-uf6er9hxb1vt0bxgjctw
+# 源实例id,可指定多个用，进行分隔
+s_InstanceId =  i-uf661wb708uvqc9jyhem,i-uf661wb708uvqc9jyhel
 
 # 源端制作镜像name
 s_ImageName = api-source-image
