--- a/imageoper/config.cfg
+++ b/imageoper/config.cfg
@@ -1,9 +1,9 @@
 # 阿里云ak配置，建议采用子账户只授权ecs镜像操作
 [common]
 # 阿里云acccesskeyid
-accessKeyId = LTAIhfXlcjyln6tW
+accessKeyId = LTAIhfxxxxxxxx
 # 阿里云accesssecret
-accessSecret = GwfAMvR4K2ELmt76184oqLTVgRfAso
+accessSecret = GwfAMvR4Kxxxxxxxxxxxxxxxxxxx
 # log目录名称
 logdir_name = logdir
 # log文件名称
